--- a/config/introscope_agent.yml
+++ b/config/introscope_agent.yml
@@ -16,5 +16,5 @@
 # Configuration for the CA Wily framework
 ---
 repository_root: "https://s3.us-east-2.amazonaws.com/introscope/"
-version: 99.99.0.taurus_perseus_cf
+version: 99.99.+
 default_agent_name: $(ruby -e "require 'json' ; puts JSON.parse(ENV['VCAP_APPLICATION'])['application_name']")
